remove try4java dependency and migrate to command and either